--- a/app/views/home/show.html.haml
+++ b/app/views/home/show.html.haml
@@ -10,8 +10,6 @@
         = button_to "Get started", "/auth/auth0", class: "text-white-600 hover:text-gray-900"
         %svg.w-5.h-5.ml-2.-mr-1{"aria-hidden" => "true", :fill => "currentColor", :viewbox => "0 0 20 20", :xmlns => "http://www.w3.org/2000/svg"}
           %path{:d => "M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z", :fill_rule => "evenodd"}
-    .lg:mt-0.lg:col-span-5.lg:flex
-      %img{:alt => "mockup", :src => "https://images.unsplash.com/photo-1554224155-1696413565d3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80"}/
 
 -# Features Section
 %section.bg-gray-50.dark:bg-gray-800
@@ -19,8 +17,10 @@
     .max-w-screen-md.mb-8.lg:mb-16
       %h2.mb-4.text-4xl.tracking-tight.font-extrabold.text-gray-900.dark:text-white
         Designed for simplicity and efficiency
-      %p.text-gray-500.sm:text-xl.dark:text-gray-400
+      %p.text-gray-500.sm:text-xl.dark:text-gray-400.mb-4
         Our platform provides all the tools you need to streamline your tax preparation process, saving you time and reducing errors.
+      .lg:mt-0.lg:col-span-5.lg:flex
+        %img{:alt => "mockup", :src => "https://images.unsplash.com/photo-1554224155-1696413565d3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80"}/
     .space-y-8.md:grid.md:grid-cols-2.lg:grid-cols-3.md:gap-12.md:space-y-0
       %div
         .flex.justify-center.items-center.mb-4.w-10.h-10.rounded-full.bg-primary-100.lg:h-12.lg:w-12.dark:bg-primary-900
